# hw412

./: .env.example  .gitignore  myproject.git  pyproject.toml
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  data.py  forms.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_master_options_alter_order_options_and_more.py  0002_alter_order_options_order_status_idx_and_more.py  0003_alter_review_rating.py  0003_order_services.py  0004_order_view_count.py
core/templates/core/: order_card_include.html  order_detail.html  orders_list.html
templates/: base.html  nav_menu_include.html  order_detail.html  test.html  thanks.html
users/: forms.py  views.py
users/migrations/: 0001_initial.py
