[project]
name = "hw412"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey",email = "bogwowwww@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "mistralai (>=1.7.0,<2.0.0)",
    "markdown (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
